# OpenDev

./: .gitignore  README.md  pyproject.toml
opendev/: __init__.py  config.py  main.py  models.py  tui.py
opendev/agent/: base.py  dependencies.py  factory.py  main_agent.py  react_executor.py  subagent.py  thinking.py
opendev/context/: __init__.py  compactor.py  memory.py  prompt_composer.py  reminders.py
opendev/persistence/: __init__.py  session.py  snapshot_manager.py  tool_logger.py
opendev/safety/: approvals.py  undo.py
opendev/skills/: __init__.py  loader.py
opendev/tools/: base_handler.py  edit_replacers.py  file_handler.py  mcp_client.py  process_handler.py  registry.py  schema_builder.py  search_handler.py  system_handler.py  web_handler.py
